# streaming_hevc

streaming_hevc/hevc_lib/: BUILD.bazel  hevc_av_io_context.h  hevc_av_io_file_context.cc  hevc_av_io_stream_context.cc  hevc_camera_config.cc  hevc_camera_config.h  hevc_decoder_avcodec.cc  hevc_decoder_context.cc  hevc_decoder_context.h  hevc_decoder_de265.cc  hevc_decoder_test.cc  hevc_decoder_x86.h  hevc_encoder_avcodec.cc  hevc_encoder_x86.h  hevc_flags.cc  hevc_flags.h  hevc_resizer.cc  hevc_resizer.h
streaming_hevc/stream/: BUILD.bazel  dir_stream_reader.cc  dir_stream_reader.h  stream_source.h
